test/flowanalysis/recursion/rec_obj-3.good
Error: Unable to determine type of field from nil (rec_obj-3.chpl:20)
